<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview_dialog_credential_info"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <GridLayout
        android:id="@+id/gridlayout_dialog_credential_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/gridlayout_dialog_grid_based_message_padding"
        android:columnCount="2">

        <LinearLayout
            android:id="@+id/linearlayout_dialog_credential_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/textview_dialog_grid_based_message_margin_bottom"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_dialog_credential_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/textview_dialog_credential_info_title_margin_bottom"
                android:textStyle="bold"
                android:text="@string/text_dialog_credential_info_title" />

            <TextView
                android:id="@+id/textview_dialog_credential_info_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/textview_dialog_credential_info_message_margin_bottom"
                android:textStyle="normal"
                android:text="" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageview_dialog_credential_info_ok"
            android:paddingTop="@dimen/imageview_dialog_credential_info_ok_padding_top"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/label_dialog_credential_info_ok"
            app:srcCompat="@drawable/icon_ok_selector" />

    </GridLayout>

</ScrollView>