<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_settings_activity_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.ibba.keepitup.ui.SettingsActivity">

    <TextView
        android:id="@android:id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/textview_settings_activity_category_title_padding_top"
        android:paddingLeft="@dimen/textview_settings_activity_category_title_padding_left"
        android:textAllCaps="false"
        android:textSize="@dimen/textview_settings_activity_category_title_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>