<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="text_dialog_decryption_error_title">Re-enter credentials</string>
    <string name="text_dialog_decryption_error_message">The following credentials could not be decrypted and must be re-entered. The most likely cause is that the app was reinstalled or transferred to a new device.</string>
    <string name="text_dialog_decryption_error_header">header</string>
    <string name="text_dialog_decryption_error_default">Default</string>
    <string name="label_dialog_decryption_error_ok">@android:string/ok</string>
</resources>